--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ flutter:
   assets:
     - assets/
 
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
