--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
   flutter_launcher_icons: ^0.14.4
+  syncfusion_flutter_pdfviewer: ^32.2.7
+  pdfx: ^2.9.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
