--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   provider: ^6.0.0
   shared_preferences: ^2.2.2
+  device_info_plus: ^12.3.0
 
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
